--- a/test/drm-em/Makefile.am
+++ b/test/drm-em/Makefile.am
@@ -16,13 +16,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+#AUTOMAKE_OPTIONS = subdir-objects
 
 SUBDIRS = 
 AM_CFLAGS= $(GST_CFLAGS) $(XKBCOMMON_CFLAGS)
 AM_LDFLAGS= $(GST_LIBS) $(GSTBASE_LIBS) $(XKBCOMMON_LIBS)
 
 AM_CXXFLAGS = $(AM_CFLAGS) -Wno-deprecated-declarations
-AM_CXXFLAGS += -DSTANDALONE -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -DTARGET_POSIX -D_LINUX -fPIC -DPIC -D_REENTRANT -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -U_FORTIFY_SOURCE -Wall -g -DHAVE_LIBOPENMAX=2 -DOMX -DOMX_SKIP64BIT -ftree-vectorize -pipe -DUSE_EXTERNAL_OMX -DHAVE_LIBBCM_HOST -DUSE_EXTERNAL_LIBBCM_HOST -DUSE_VCHIQ_ARM -Wno-psabi
+AM_CXXFLAGS += -DSTANDALONE -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -DTARGET_POSIX -D_LINUX -fPIC -DPIC -D_REENTRANT -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -U_FORTIFY_SOURCE -Wall -g -ftree-vectorize -pipe -DHAVE_LIBBCM_HOST -DUSE_EXTERNAL_LIBBCM_HOST -Wno-psabi
 
 bin_PROGRAMS = westeros-unittest
 
