--- a/brcm/westeros-sink/configure.ac
+++ b/brcm/westeros-sink/configure.ac
@@ -23,9 +23,9 @@
 dnl AC_PREREQ([2.65])
 AC_INIT(westeros-sink, version-1.0, jeff_wannamaker@cable.comcast.com,westeros-sink)
 AC_CONFIG_SRCDIR([])
-AC_CONFIG_HEADERS([cfg/config.h])
-AC_CONFIG_MACRO_DIR([cfg])
-AC_CONFIG_AUX_DIR([cfg])
+AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_AUX_DIR([.])
 AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-bzip2 1.9])
 LT_INIT
 
