--- a/drm/modules/configure.ac
+++ b/drm/modules/configure.ac
@@ -23,8 +23,8 @@
 dnl AC_PREREQ([2.65])
 AC_INIT(modules, version-1.0, moorthy.baskaravenkatraman-sambamoorthy@linaro.org,modules)
 AC_CONFIG_SRCDIR([])
-AC_CONFIG_HEADERS([cfg/config.h])
-AC_CONFIG_MACRO_DIR([cfg])
+AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([.])
 AC_CONFIG_AUX_DIR([.])
 AC_CONFIG_SUBDIRS([resolution])
 AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-bzip2 1.9])
