Enhance drm emulation for videoserver automated testing
Change-Id: I6e5eeb53a66364f294eac58fcc50b895afc55097
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/test/Makefile.brcm
+++ b/test/Makefile.brcm
@@ -394,6 +394,7 @@ westeros-essos:
 westeros-render-nexus:
 	$(call setenv) && \
 	cd brcm/westeros-render-nexus && \
+	mkdir -p m4 && \
 	aclocal -I cfg && \
 	libtoolize --automake && \
 	autoheader && \
@@ -408,6 +409,7 @@ westeros-soc-sink:
 	cp westeros-sink/westeros-sink.c brcm/westeros-sink/westeros-sink.c && \
 	cp westeros-sink/westeros-sink.h brcm/westeros-sink/westeros-sink.h && \
 	cd brcm/westeros-sink && \
+	mkdir -p m4 && \
 	aclocal -I cfg && \
 	libtoolize --automake && \
 	autoheader && \
