Restructure essos: -divide API into app and system -add explicit keyRepeat method to key listener
Change-Id: I92409fbf1f7c893dd477f683702fce796dc8cba5
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/essos/Makefile.am
+++ b/essos/Makefile.am
@@ -27,7 +27,7 @@ bin_PROGRAMS = essos-sample
 BUILT_SOURCES= libessos.la
 
 libessos_la_SOURCES = essos.cpp
-libessos_la_include_HEADERS = essos.h
+libessos_la_include_HEADERS = essos.h essos-app.h essos-system.h
 libessos_la_includedir = $(includedir)
 
 libessos_la_CXXFLAGS = $(AM_CXXFLAGS) -I$(top_srcdir)/..
