--- a/v4l2/westeros-sink/Makefile.am
+++ b/v4l2/westeros-sink/Makefile.am
@@ -27,7 +27,11 @@ LIB_SUB_DIR= gstreamer-0.10
 
 AM_CFLAGS = $(GST_CFLAGS)
 
-AM_LDFLAGS = $(GST_LIBS)  $(GSTBASE_LIBS) $(WAYLANDLIB) -avoid-version
+AM_LDFLAGS = $(GST_LIBS) $(GSTBASE_LIBS) $(GSTALLOCATORS_LIBS) $(WAYLANDLIB) -avoid-version
+
+if HAVE_GST_ALLOCATORS
+AM_CFLAGS += -DUSE_GST_ALLOCATORS
+endif
 
 plugin_LTLIBRARIES = libgstwesterossink.la
 
