v4l2+drm updates: -restructure westeros-gl video server to use VideoFrameManager -add display server and westeros-gl-console -initial support for amlogic av sync module (enable with 'export WESTEROS_GL_USE_AVLOGIC_AVSYNC=1) -allow sink to freerun with 'export WESTEROS_SINK_USE_FREERUN=1'
Change-Id: Ia3ef86b3286d246882326e04be8dba1db25585d1
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/drm/Makefile.am
+++ b/drm/Makefile.am
@@ -32,6 +32,10 @@ endif
 
 lib_LTLIBRARIES = libwesteros_gl.la
 
+bin_PROGRAMS = westeros-gl-console
+
+BUILT_SOURCES = libwesteros_gl.la
+
 libwesteros_gl_la_SOURCES = westeros-gl/westeros-gl.c
 
 libwesteros_gl_la_include_HEADERS = westeros-gl/westeros-gl.h
@@ -42,6 +46,10 @@ libwesteros_gl_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    -ldrm \
    -lgbm
+
+westeros_gl_console_SOURCES = westeros-gl/westeros-gl-console.c
+westeros_gl_consoloe_CFLAGS = $(AM_CFLAGS) -D_GNU_SOURCE
+westeros_gl_LDFLAGS = $(AM_LDFLAGS)
 
 pkgconfigdir = $(libdir)/pkgconfig
    
