--- a/essos/Makefile.am
+++ b/essos/Makefile.am
@@ -46,8 +46,12 @@ if HAVE_EGL
 libessos_la_CXXFLAGS += ${EGL_CFLAGS}
 endif
 
+if NO_WESTEROS
+libessos_la_CXXFLAGS += $(WESTEROS_CFLAGS)
+else
 libessos_la_CXXFLAGS += -DHAVE_WESTEROS $(WESTEROS_CFLAGS)
 libessos_la_LDFLAGS += -lwesteros_gl -lwesteros_simpleshell_client
+endif
 
 essos_sample_SOURCES = essos-sample.cpp
 essos_sample_CXXFLAGS = ${AM_CXXFLAGS}
