v4l2: fix vertical positioning with force-aspect-ratio
Change-Id: Ib9c9f945e4f69461a5b4ecc8565ec074ca4dbc77
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/test/Makefile.drm
+++ b/test/Makefile.drm
@@ -183,7 +183,8 @@ westeros-simplebuffer: .simplebuffer
 	wget https://git.linuxtv.org/linux.git/plain/include/uapi/linux/videodev2.h -O $(WID)/include/linux/.videodev2.h && \
 	wget https://git.linuxtv.org/linux.git/plain/include/linux/compiler.h -O $(WID)/include/linux/compiler.h && \
 	wget https://git.linuxtv.org/linux.git/plain/include/linux/compiler_types.h -O $(WID)/include/linux/compiler_types.h && \
-	sed '/v4l2-controls/ a\#include "westeros-ut-open.h"' $(WID)/include/linux/.videodev2.h > $(WID)/include/linux/videodev2.h && \
+	sed 's/__user//g; /v4l2-controls/ a\#include "westeros-ut-open.h"' $(WID)/include/linux/.videodev2.h > $(WID)/include/linux/videodev2.h && \
+	sed '/#include <asm\/rwonce.h>/d' $(WID)/include/linux/compiler.h > $(WID)/include/linux/compiler.h && \
 	$(call setenv) && \
 	export SCANNER_TOOL=$(CID)/bin/wayland-scanner && \
 	make -C protocol && \
