Video updates: -add Essos resource manager for the coordinated use of video resources -integrate use of resource manager into westeros-sink -add software video decode capability to westeros-sink
Use of the resource manager is runtime disabled by default.  Enable with
'export WESTEROS_SINK_USE_ESSRMGR=1'.  At present it can be enabled only for the brcm platform.

Software decode support is disabled at build time by default.  It may be enabled by defining
-DENABLE_SW_DECODE in the build.  At present it can be enabled only for the brcm platform.

Change-Id: I9ef55877a20030ef432fc8e56fc26ec1de3f1a34
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/westeros-sink/emu/Makefile.am
+++ b/westeros-sink/emu/Makefile.am
@@ -22,6 +22,6 @@ plugin_LTLIBRARIES = libgstwesterossink.la
 libgstwesterossink_la_SOURCES =  westeros-sink.c  westeros-sink-soc.c
 libgstwesterossink_la_CFLAGS =  $(GST_CFLAGS) $(WAYLAND_CLIENT_CFLAGS) $(WAYLAND_SERVER_CFLAGS)
 libgstwesterossink_la_LDFLAGS = $(GST_LIBS) 
-libgstwesterossink_la_LIBADD = -lwayland-client -lgstvideo-1.0 -lgstreamer-1.0 -lgstbase-1.0 -lwesteros_simplebuffer_client -lwesteros_simpleshell_client -lwesteros_compositor -lgstvideo-1.0 -ldl -lEGL
+libgstwesterossink_la_LIBADD = -lwayland-client -lgstvideo-1.0 -lgstreamer-1.0 -lgstbase-1.0 -lwesteros_simplebuffer_client -lwesteros_simpleshell_client -lessos -lwesteros_compositor -lgstvideo-1.0 -ldl -lEGL
 libgstwesterossink_la_LDFLAGS += -module -avoid-version
 libgstwesterossink_la_LIBTOOLFLAGS = --tag=disable-static
