--- a/westeros-sink/v4l2/Makefile.am
+++ b/westeros-sink/v4l2/Makefile.am
@@ -45,6 +45,7 @@ libgstwesterossink_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    $(GST_LIBS)  $(GSTBASE_LIBS) $(WAYLANDLIB) -avoid-version \
    -ldrm -lgbm \
+   -lessos \
    -lwesteros_compositor \
    -lwesteros_simplebuffer_client \
    -lwesteros_simpleshell_client
