v4l2 westeros-sink: change to m4 configure macro dir
reason: dunfell build expects m4 config directory

Signed-off-by: Moorthy Baskar <moorthy.bs@ltts.com>
Change-Id: I649bd969a04ea91de7dd276061afb09a3f6e4c6a

--- a/test/Makefile.drm
+++ b/test/Makefile.drm
@@ -248,6 +248,7 @@ westeros-soc-sink:
 	cp westeros-sink/westeros-sink.c v4l2/westeros-sink/westeros-sink.c && \
 	cp westeros-sink/westeros-sink.h v4l2/westeros-sink/westeros-sink.h && \
 	cd v4l2/westeros-sink && \
+	mkdir -p m4 && \
 	aclocal -I cfg && \
 	libtoolize --automake && \
 	autoheader && \
