Video updates: -separate Essos resource manager into libessosrmgr.so -sinks link with libessosrmgr.so rather than libessos.so
Change-Id: Idb78b94e249b68e206675be3b69a55eb635ca9ec
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/essos/Makefile.am
+++ b/essos/Makefile.am
@@ -20,18 +20,26 @@
 AUTOMAKE_OPTIONS = subdir-objects
 ACLOCAL_AMFLAGS = -I .
 
-lib_LTLIBRARIES = libessos.la
+lib_LTLIBRARIES = libessos.la libessosrmgr.la
 
 bin_PROGRAMS = essos-sample essos-sample-resmgr
 
-BUILT_SOURCES= libessos.la
+BUILT_SOURCES= libessos.la libessosrmgr.la
 
-libessos_la_SOURCES = essos.cpp essos-resmgr.cpp
-libessos_la_include_HEADERS = essos.h essos-app.h essos-system.h essos-game.h essos-resmgr.h
+libessos_la_SOURCES = essos.cpp
+libessos_la_include_HEADERS = essos.h essos-app.h essos-system.h essos-game.h
 libessos_la_includedir = $(includedir)
 
 libessos_la_CXXFLAGS = $(AM_CXXFLAGS) -I$(top_srcdir)/..
 libessos_la_LDFLAGS = $(AM_LDFLAGS) -lEGL -ldl -lpthread
+
+libessosrmgr_la_SOURCES = essos-resmgr.cpp
+libessosrmgr_la_include_HEADERS = essos-resmgr.h
+libessosrmgr_la_includedir = $(includedir)
+
+libessosrmgr_la_CXXFLAGS = $(AM_CXXFLAGS) -I$(top_srcdir)/..
+libessosrmgr_la_LDFLAGS = $(AM_LDFLAGS) -lpthread
+
 
 if HAVE_WAYLAND
 if HAVE_WAYLAND_EGL
@@ -62,7 +70,7 @@ essos_sample_LDFLAGS = $(AM_FLAGS) -lessos -lGLESv2
 
 essos_sample_resmgr_SOURCES = essos-sample-resmgr.cpp
 essos_sample_resmgr_CXXFLAGS = ${AM_CXXFLAGS}
-essos_sample_resmgr_LDFLAGS = $(AM_FLAGS) -lessos
+essos_sample_resmgr_LDFLAGS = $(AM_FLAGS) -lessosrmgr
 
 ## IPK Generation Support
 IPK_GEN_PATH = $(abs_top_builddir)/ipk
