--- a/westeros-sink/icegdl/Makefile.am
+++ b/westeros-sink/icegdl/Makefile.am
@@ -40,7 +40,7 @@ libwesteros_sink_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    $(GST_LIBS)  $(GSTBASE_LIBS) $(WAYLANDLIB) -avoid-version \
    -lwayland-egl \
-   -lessos \
+   -lessosrmgr \
    -lwesteros_compositor \   
    -lwesteros_simplebuffer_client \
    -lwesteros_simpleshell_client \
