--- a/westeros-sink/rpi/Makefile.am
+++ b/westeros-sink/rpi/Makefile.am
@@ -39,7 +39,7 @@ libgstwesterossink_la_CFLAGS= \
 libgstwesterossink_la_LDFLAGS= \
    $(AM_LDFLAGS) \
    $(GST_LIBS)  $(GSTBASE_LIBS) $(WAYLANDLIB) -avoid-version \
-   -lessos \
+   -lessosrmgr \
    -lwesteros_compositor \   
    -lwesteros_simplebuffer_client \
    -lwesteros_simpleshell_client \
