Video updates: -add support for SEI time codes.  Time codes attached as GstVideoTimeCodeMeta to received buffers can be used to cause a new 'timecode-callback' signal to fire each time a frame with a new time code is presented.  Time code processing and signal generation is disabled by default but can be enabled via the 'enable-timecode' property
Change-Id: I900dc8e58acae3419f6a768b058ad88a53793be3
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/westeros-sink/brcm/Makefile.am
+++ b/westeros-sink/brcm/Makefile.am
@@ -29,7 +29,11 @@ LIB_SUB_DIR= gstreamer-0.10
 
 AM_CFLAGS = $(NEXUS_CFLAGS) $(NXCLIENT_CFLAGS) $(GST_CFLAGS)
 
-AM_LDFLAGS = $(GST_LIBS)  $(GSTBASE_LIBS) $(WAYLANDLIB) -avoid-version
+AM_LDFLAGS = $(GST_LIBS)  $(GSTBASE_LIBS) $(GSTVIDEO_LIBS) $(WAYLANDLIB) -avoid-version
+
+if HAVE_GST_VIDEO
+AM_CFLAGS += -DUSE_GST_VIDEO
+endif
 
 plugin_LTLIBRARIES = libgstwesterossink.la
 
@@ -45,7 +49,6 @@ libgstwesterossink_la_LDFLAGS= \
    -lwesteros_compositor \   
    -lwesteros_simplebuffer_client \
    -lwesteros_simpleshell_client \
-   -lgstvideo-1.0 \
    -lessosrmgr \
    -lwayland-egl \
    -lnxclient \
