--- a/westeros-sink/brcm/configure.ac
+++ b/westeros-sink/brcm/configure.ac
@@ -42,6 +42,7 @@ AC_TYPE_SIZE_T
 AC_HEADER_STDBOOL
 
 IARM_CFLAGS=" "
+GST_VIDEO_DETECTED=" "
 
 # Checks for library functions.
 #Add the subdirectories to be considered for building.
@@ -63,6 +64,7 @@ AS_IF([test "x$enable_gstreamer1" = "xyes"], [
 
   AS_IF([test "x$have_gst1" = "xyes"], [
     PKG_CHECK_MODULES([GSTBASE], [gstreamer-base-1.0 >= 1.4])
+    PKG_CHECK_MODULES([GSTVIDEO], [gstreamer-video-1.0 >= 1.4],[GST_VIDEO_DETECTED=true],[GST_VIDEO_DETECTED=false])
     AC_DEFINE(USE_GST1, 1, [Build with GStreamer 1.x])
   ], [])
 ], [])
@@ -84,6 +86,8 @@ PKG_CHECK_MODULES([GLIB],[glib-2.0 >= 2.22.5])
 PKG_CHECK_MODULES([GTHREAD],[gthread-2.0 >= 2.38.2])
 PKG_CHECK_MODULES([WAYLAND_CLIENT],[wayland-client >= 1.6.0])
 PKG_CHECK_MODULES([WAYLAND_SERVER],[wayland-server >= 1.6.0])
+
+AM_CONDITIONAL([HAVE_GST_VIDEO], [test x$GST_VIDEO_DETECTED = xtrue])
 
 WAYLANDLIB="-lwayland-client"
 AC_SUBST(WAYLANDLIB)
