drm: add support for gbm modifiers: -support is disabled at build type by default.  Enable by passing --enable-gbm-modifiers to configure -support is disabled at runtime by default.  Enable at runtime by defining WESTEROS_GL_USE_GBM_MODIFIERS=1 to env
Change-Id: I51d6bb4d9c9a156524b7c80fe0d428dc6ebf3318
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/drm/configure.ac
+++ b/drm/configure.ac
@@ -59,6 +59,18 @@ PKG_CHECK_MODULES([EGL],[egl >= 0.0],[EGL_DETECTED=true],[EGL_DETECTED=false])
 AM_CONDITIONAL([HAVE_EGL], [test x$EGL_DETECTED = xtrue])
 PKG_CHECK_MODULES([WAYLAND_SERVER],[wayland-server >= 1.6.0])
 
+AC_ARG_ENABLE([gbm-modifiers],
+              AS_HELP_STRING([--enable-gbm-modifiers],[enable gbm modifiers (default is no)]),
+              [
+                case "${enableval}" in
+                 yes) ENABLE_GBM_MODIFIERS=true ;;
+                  no) ENABLE_GBM_MODIFIERS=no ;;
+                   *) AC_MSG_ERROR([bad value ${enableval} for --enable-gbm-modifiers]) ;;
+                esac
+              ],
+              [echo "gbm modifiers is disabled"])
+AM_CONDITIONAL([ENABLE_GBM_MODIFIERS], [test x$ENABLE_GBM_MODIFIERS = xtrue])
+
 WAYLANDLIB="-lwayland-client"
 AC_SUBST(WAYLANDLIB)
 
